# rapier.js

./: CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: main.yml
rapier2d/: Cargo.toml  build_rust.sh  build_typescript.sh  tsconfig.json
rapier3d/: Cargo.toml
src/: lib.rs
src.ts/: exports.ts
src.ts/dynamics/: impulse_joint.ts  rigid_body.ts
src.ts/geometry/: collider.ts
src.ts/pipeline/: index.ts  world.ts
src/geometry/: shape.rs
src/pipeline/: mod.rs
