[package]
name = "dimforge_rapier3d" # Can't be named rapier3d which conflicts with the dependency.
version = "0.16.1"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust - official JS bindings."
documentation = "https://rapier.rs/rustdoc/rapier2d/index.html"
homepage = "https://rapier.rs"
repository = "https://github.com/dimforge/rapier.js"
readme = "README.md"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
edition = "2018"

[features]
default = ["dim3"]
dim3 = []

[lib]
name = "rapier_wasm3d"
path = "../src/lib.rs"
crate-type = ["cdylib", "rlib"]
required-features = ["dim3"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
] }

[dependencies]
rapier3d = { version = "0.25.1", features = [
    "simd-stable",
    "parallel",
] }
wasm-bindgen = "0.2.100"
js-sys = "0.3"
nalgebra = "0.33"
wasm-bindgen-rayon = "1.3"

[package.metadata.wasm-pack.profile.release]
# add -g to keep debug symbols
wasm-opt = ['-O4', '--dce']
#wasm-opt = ['-g']
